<resources>
    <string name="app_name">Sporlif</string>

    <!-- Buttons -->
    <string name="continue_button">CONTINUAR</string>
    <string name="search_again_button">BUSCAR DE NUEVO</string>

    <!-- Registro -->
    <string name="act_regist_sep_login_data">Datos de Registro</string>
    <string name="act_regist_hint_confirm_pass">Confirmar Contraseña</string>
    <string name="act_regist_sep_user_data">Datos Personales</string>

    <string name="act_regist_btn_next">Siguiente</string>

    <string name="act_regist_txt_personal_data">¿Quién eres?</string>
    <string name="act_regist_hint_first_name">Nombre</string>
    <string name="act_regist_hint_last_name">Apellido</string>

    <string name="act_regist_txt_birth_date">¿Cuándo fue tu nacimiento?</string>
    <string name="act_regist_hint_birth">Fecha de Nacimiento</string>

    <string name="act_regist_txt_genre">¿Cuál es tu género?</string>
    <string name="act_regist_hint_genre">Género</string>

    <string name="act_regist_txt_living_place">¿De Dónde Eres?</string>
    <string name="act_regist_lbl_living_place">Selecciona un lugar</string>

    <string name="act_regist_txt_additional">Datos Adicionales</string>
    <string name="act_regist_txt_nick">¿Cuál es tu apodo?</string>
    <string name="act_regist_hint_nick">Apodo</string>
    <string name="act_regist_txt_position">¿Cuál es tu posición?</string>
    <string name="act_regist_lbl_position">Selecciona una posición</string>

    <string name="act_regist_txt_photo">Muéstranos quien eres</string>
    <string name="act_regist_txt_user_data">Y por último...</string>

    <string name="act_regist_btn_regist">Registrarse</string>

    <!-- Inicio de Sesión -->
    <string name="act_login_hint_user_email">Correo electrónico</string>
    <string name="act_login_hint_pass">Contraseña</string>
    <string name="act_login_btn_login">Iniciar Sesión</string>
    <string name="act_login_txt_sign_in">Crear una nueva cuenta de Sporlif</string>
    <string name="act_login_txt_recover_pass">¿Has olvidado tu contraseña?</string>
    <string name="act_recover_btn_send">Enviar</string>

    <!-- Recover password frg_enter_mail -->
    <string name="frg_enter_mail_tag">Recupera tu cuenta</string>
    <string name="frg_enter_mail_text_guide">Ingresa el correo electrónico para buscar tu cuenta.</string>
    <string name="frg_enter_mail_no_exist_user">El usuario no existe</string>
    <string name="frg_enter_mail_unsuccessful_send">El correo no puedo ser enviado intentelo de nuevo</string>
    <string name="frg_enter_mail_successful_send">El correo se ha enviado con exito</string>
    <string name="frg_enter_mail_dialog_title_no_exist_acc">No hay ninguna cuenta que coincida con esa información.</string>
    <string name="frg_enter_mail_dialog_message_no_exist_acc">Asegúrate de que especificaste la dirección de correo electrónico correcta.</string>

    <!-- Recover password frg_enter_code -->
    <string name="frg_enter_code_email">Ingresa el código que enviamos a </string>
    <string name="frg_enter_code_text_guide">Te enviamos un correo electrónico con un código de seis dígitos. Ingresa ese código para restablecer tu contraseña.</string>
    <string name="frg_enter_code_hint_code">Ingresar el código</string>
    <string name="frg_enter_code_ask_receive">¿No recibiste el correo electrónico?</string>
    <string name="frg_enter_code_resend">Enviar nuevamente el correo electrónico</string>

    <!-- Recover password frg_enter_new_password -->
    <string name="frg_enter_new_password_email">Crea una contraseña nueva.</string>
    <string name="frg_enter_new_password_text_guide">Usarás esta contraseña para acceder a tu cuenta.\n Ingresa una combinación de al menos seis números, letras y signos de puntuación.</string>
    <string name="frg_enter_new_password_hint_code">Escribe la nueva contraseña</string>

    <!-- Dialogos -->
    <string name="dlg_loading_dialog_title">Cargando</string>
    <string name="dlg_loading_dialog_msg">Por favor espere...</string>


    <string-array name="genre">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="position">
        <item>Portero</item>
        <item>Defensa</item>
        <item>Medio</item>
        <item>Delantero</item>
        <item>Técnico</item>
    </string-array>

    <!-- General Messages -->
    <string name="has_not_been_able_to_connect_to_server">No se ha podido conectar al sevidor intentelo de nuevo mas tarde.</string>

    <!-- Validations Messages -->
    <string name="cannot_is_empty">El campo no puede estar vacío.</string>

</resources>
