<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/act_regist_txt_nick"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/frgProfileNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_regist_hint_nick"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_txt_position"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/frgProfileLstPosition"
        style="@style/Platform.Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_lbl_position"
        android:textColor="@color/colorLightGray"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_txt_photo"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/frgProfileImgProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorLightBlue"
        android:padding="@dimen/padding_fields"
        android:src="@drawable/ic_camera" />


</LinearLayout>