<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_txt_user_data"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/actRegistEtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_login_hint_user_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/actRegistEtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_login_hint_pass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/actRegistEtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_regist_hint_confirm_pass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>