<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/act_regist_txt_personal_data"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/EditTextGray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/frgPersonalDataEtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_regist_hint_first_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/EditTextGray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/frgPersonalDataEtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/act_regist_hint_last_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_txt_birth_date"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/frgPersonalDataDpBirth"
        style="@android:style/Widget.DatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_regist_txt_genre"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/frgPersonalDataRgGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/frgPersonalDataRbGenre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genre 1" />

        <RadioButton
            android:id="@+id/frgPersonalDataRbGenre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genre 2" />

    </RadioGroup>

</LinearLayout>
