<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sporlif.activities.user.recoverFrg.FrgEnterNewPassword">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frg_enter_new_password_email"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/margin_bottom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frg_enter_new_password_text_guide"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/iTxtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frg_enter_new_password_hint_code"
                    android:gravity="center_horizontal"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnEnterCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/continue_button"
                android:theme="@style/ButtonLight"
                android:backgroundTint="@color/colorLightBlue"
                android:onClick="goContainer"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>