<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_fields">

                <ImageView
                    android:id="@+id/actRegistImgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/padding_fields"
                    android:src="@drawable/ic_camera"
                    android:background="@color/colorLightBlue" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/actRegistEtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_regist_hint_first_name"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/actRegistEtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_regist_hint_last_name"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/actRegistEtPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_regist_hint_place"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/actRegistSpnGenre"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/act_regist_hint_genre"
                    android:textSize="20dp"
                    android:textColor="@color/colorLightGray"/>

                <TextView
                    android:id="@+id/actRegistSpnPosition"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/act_regist_hint_position"
                    android:textSize="20dp"
                    android:textColor="@color/colorDarkGray"/>

                <TextView
                    android:id="@+id/actRegistSpnBirth"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/act_regist_hint_birth"
                    android:textSize="20dp"
                    android:textColor="@color/colorLightGray"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextGray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/actRegistEtNickName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_regist_hint_nick"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/actRegistBtnRegist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:theme="@style/ButtonLight"
                    android:backgroundTint="@color/colorLightBlue"
                    android:text="@string/act_regist_btn_regist" />

            </LinearLayout>

        </ScrollView>

</android.support.design.widget.CoordinatorLayout>